# gs_me

./: .gitignore  pyproject.toml  run.py
genomespy/: index.html
gs_me/: run.py
src/gs_me/: run.py
